# kittygifs

./: .env.example  .markdownlint.json  Caddyfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
backend/: .gitignore  Dockerfile  go.mod  go.sum  main.go  query.go  query_test.go
backend/other/: tag_count.go
backend/resources/: emailChangeMail.template  verificationMail.template
backend/routes/: gifs.go  logto.go  mod.go  notifications.go  sync.go  tags.go  users.go
backend/util/: db.go  gin.go  other.go  query.go  query_test.go  regex.go  session_storage.go  smtp.go  types.go
backend/util/notifications/: notifications.go
docs/: api.md  selfhost.md
frontend/: .dockerignore  .env.development  .env.production  .eslintrc.js  .prettierrc.cjs  Dockerfile  MAKE_PKGBUILD.sh  README.md  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.tauri.ts  vite.config.ts
frontend/public/legal/: privacy.md  terms.md
frontend/src/: App.tsx  GifPreviewSingle.tsx  QueryInput.tsx  index.css  index.tsx  skybord-components.css  skybord-main.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/client/: Client.ts
frontend/src/components/: GifPreviewSingle.tsx  GroupSelect.tsx  NavbarLinks.tsx  QueryInput.tsx  SearchHighlight.tsx  TagSpan.tsx  TagsDiff.tsx
frontend/src/pages/: AccountDeletionPage.tsx  EditGifPage.tsx  GifPage.tsx  IndexPage.tsx  LoginPage.tsx  LogoutPage.tsx  (+7 more)
(+11 files in other folders)
