[package]
name = "app"
version = "0.1.0"
description = "A dekstop app for kittygifs"
authors = ["Jan0660"]
license = "AGPL3"
repository = "https://github.com/Jan0660/kittygifs"
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all", "default", "devtools", "system-tray"] }
# enigo = "0.1.2"
# enigo = { path = "C:\\Users\\Jan\\source\\enigo" }
enigo = { git = "https://github.com/Jan0660/enigo.git", hash = "96c894435acbada65156e38a10ba8dfa78652267"}
# cli-clipboard = "0.4.0"
global-hotkey = "0.2.2"
lazy_static = "1.4.0"
# tauri-plugin-global-shortcut = "2.0.0-alpha.0"
notify-rust = "4.8.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size
